# AnnaTranslator

./: .gitignore  .prettierignore  README.md  deno.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
script/renpy/: espeak  espeak.sh  say  say.nu  say.sh
script/rpgmaker/: inject.js
src/: App.vue  HistoryWindow.vue  SettingsWindow.vue  history.ts  i18n.ts  main.ts  openaiClient.ts  settings.ts  style.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: devtools.json  main.json  settings.json
src-tauri/src/: cache.rs  clipboard.rs  furigana.rs  history.rs  http_server.rs  main.rs  text_replacements.rs
src/locales/: en.ts  zh-CN.ts
src/types/: i18n-shims.d.ts  intlify-devtools-types.d.ts
