[package]
name = "local-translator"
version = "0.1.0"
description = "Galgame translator overlay powered by Tauri 2"
edition = "2021"
rust-version = "1.77"

[features]
default = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
tauri-plugin-store = "2"
